--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -7,13 +7,364 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__top">
+        <div class="header__page-name-wrapper">
+          <a href="#" class="header__page-name">Na<br>Mu</a>
+        </div>
+      </div>
+
+      <div class="header__bottom">
+        <section class="art-museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+          <a class="art-museum__ticket-link" href="#">Квитки</a>
+
+          <p class="art-museum__event">Події</p>
+        </section>
+      </div>
+
+
+      <a class="header__menu-link" href="#menu">
+        <img
+          class="header__menu-icon"
+          src="./images/icons/burger-menu-icon.svg"
+          alt="Menu icon"
+        >
+      </a>
+
+    </header>
+
+    <aside class="dropdown-menu page__dropdown-menu" id="menu">
+      <div class="dropdown-menu__content">
+        <nav class="navigation dropdown-menu__navigation">
+          <div class="navigation__close-wrapper">
+            <a
+              class="navigation__close-link"
+              href="#"
+              title="Menu close"
+            >
+              <img
+                class="navigation__close-icon"
+                src="./images/icons/close-icon.svg"
+                alt="Close menu icon"
+              >
+            </a>
+          </div>
+
+          <div class="navigation__left">
+            <a class="navigation__link" href="#">Галерея</a>
+            <a class="navigation__link" href="#"><nobr>Виставки та</nobr> події</a>
+          </div>
+
+          <div class="navigation__right">
+            <a class="navigation__link" href="#">Про Нас</a>
+            <a class="navigation__link" href="#">Контакти</a>
+          </div>
+        </nav>
+
+        <menu class="work-schedule">
+          <p class="work-schedule__text">Графік роботи</p>
+          <div class="work-schedule__content">
+            <ul class="work-schedule__list">
+              <li class="work-schedule__item">
+                <p class="work-schedule__text">
+                  <span class="work-schedule__text--weight600">12:00 — 20:00</span> середа
+                </p>
+              </li>
+
+              <li class="work-schedule__item">
+                <p class="work-schedule__text">
+                  <span class="work-schedule__text--weight600">12:00 — 20:00</span> четвер
+                </p>
+              </li>
+
+              <li class="work-schedule__item">
+                <p class="work-schedule__text">
+                  <span class="work-schedule__text--weight600">12:00 — 20:00</span> п’ятниця
+                </p>
+              </li>
+
+              <li class="work-schedule__item">
+                <p class="work-schedule__text">
+                  <span class="work-schedule__text--weight600">11:00 — 19:00</span> субота
+                </p>
+              </li>
+
+              <li class="work-schedule__item">
+                <p class="work-schedule__text">
+                  <span class="work-schedule__text--weight600">11:00 — 19:00</span> неділя
+                </p>
+              </li>
+            </ul>
+
+            <p class="work-schedule__text">
+              <span class="work-schedule__text--weight600">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </menu>
+      </div>
+    </aside>
+
+    <main class="main">
+      <section class="current-events">
+        <div class="container">
+          <h2 class="current-events__title">Актуальні події</h2>
+
+          <div class="current-events_content">
+            <article class="current-event">
+              <img
+                class="current-event__photo"
+                src="./images/currents-event/current-event-1.png"
+                alt="Event photo"
+              >
+
+              <div class="current-event__name-time">
+                <p class="current-event__name">Виставка</p>
+
+                <p class="current-event__time">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="current-event__title">Йду і повертаюсь</h3>
+
+              <p class="current-event__desc">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </article>
+
+            <article class="current-event">
+              <img
+                class="current-event__photo"
+                src="./images/currents-event/current-event-2.png"
+                alt="Event photo"
+              >
+
+              <div class="current-event__name-time">
+                <p class="current-event__name">Виставка</p>
+
+                <p class="current-event__time">26.08-29.11.2019</p>
+              </div>
+
+              <h3 class="current-event__title">І спогади і мрії</h3>
+
+              <p class="current-event__desc">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <img
+          class="lecture__photo"
+          src="./images/lecture/lecture-photo.png"
+          alt="Lecture photo"
+        >
+
+        <div class="lecture__content">
+          <div class="lecture__name-time">
+            <p class="lecture__name">Лекція</p>
+
+            <p class="lecture__time">26/08/2019 - 11:00</p>
+          </div>
+
+          <h3 class="lecture__title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+
+        <div class="gallery__img-block">
+          <img
+            class="gallery__img"
+            src="./images/slider/slide-1.jpg"
+            alt="First slider image"
+          >
+
+          <img
+            class="gallery__img"
+            src="./images/slider/slide-2.jpg"
+            alt="Second slider image"
+          >
+
+          <img
+            class="gallery__img"
+            src="./images/slider/slide-1.jpg"
+            alt="Third slider image"
+          >
+
+          <img
+            class="gallery__img"
+            src="./images/slider/slide-2.jpg"
+            alt="Fourth slider image"
+          >
+        </div>
+
+        <div class="gallery__btn-block">
+          <div class="gallery__btn gallery__btn--active"></div>
+          <div class="gallery__btn"></div>
+          <div class="gallery__btn"></div>
+          <div class="gallery__btn"></div>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="subscribe__wrapper">
+          <div class="container">
+            <div class="subscribe__content">
+              <h2 class="subscribe__title">Підписка</h2>
+
+              <p class="subscribe__desc">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </p>
+
+              <form
+                class="subscribe__form"
+                action="#"
+                onsubmit="this.reset(); return false;"
+              >
+                <input
+                  class="subscribe__email"
+                  type="email"
+                  placeholder="E-mail"
+                  required
+                >
+
+                <button class="subscribe__button"></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__link-block">
+            <a class="footer__link-logo" href="#">Na<br>Mu</a>
+
+            <div class="footer__social">
+              <a
+                class="footer__social-link footer__social-link--fb"
+                href="#"
+                title="Facebook"
+              >
+              </a>
+
+              <a
+                class="footer__social-link footer__social-link--inst"
+                href="#"
+                title="Instagram"
+              >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__info-block">
+            <menu class="work-schedule footer__work-schedule">
+              <p class="work-schedule__text work-schedule__text--color">Графік роботи</p>
+              <div class="work-schedule__content work-schedule__content--footer">
+                <ul class="work-schedule__list">
+                  <li class="work-schedule__item">
+                    <p class="work-schedule__text work-schedule__text--color">
+                      <span class="work-schedule__text--weight600">12:00 — 20:00</span> середа
+                    </p>
+                  </li>
+
+                  <li class="work-schedule__item">
+                    <p class="work-schedule__text work-schedule__text--color">
+                      <span class="work-schedule__text--weight600">12:00 — 20:00</span> четвер
+                    </p>
+                  </li>
+
+                  <li class="work-schedule__item">
+                    <p class="work-schedule__text work-schedule__text--color">
+                      <span class="work-schedule__text--weight600">12:00 — 20:00</span> п’ятниця
+                    </p>
+                  </li>
+
+                  <li class="work-schedule__item">
+                    <p class="work-schedule__text work-schedule__text--color">
+                      <span class="work-schedule__text--weight600">11:00 — 19:00</span> субота
+                    </p>
+                  </li>
+
+                  <li class="work-schedule__item">
+                    <p class="work-schedule__text work-schedule__text--color">
+                      <span class="work-schedule__text--weight600">11:00 — 19:00</span> неділя
+                    </p>
+                  </li>
+                </ul>
+
+                <p class="work-schedule__text work-schedule__text--color">
+                  <span class="work-schedule__text--weight600">Вихідні:</span> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </menu>
+
+            <section class="contacts">
+              <h6 class="contacts__title">Контакти:</h6>
+
+              <address class="contacts__address">
+                <a
+                  class="contacts__link"
+                  href="https://maps.app.goo.gl/3FyTiXoJAnbrNdzy5"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+
+                <a class="contacts__link" href="tel:+380442781357">
+                  тел. +38 (044) 278-13-57
+                </a>
+
+                <a class="contacts__link" href="tel:+380442787454;fax">
+                  факс +38 (044) 278-74-54
+                </a>
+
+                <a class="contacts__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+              </address>
+            </section>
+
+            <div class="footer__to-top">
+              <a class="footer__link-top" href="#"></a>
+            </div>
+          </div>
+
+          <nav class="navigation footer__navigation">
+            <div class="navigation__left navigation__left--footer">
+              <a class="navigation__link navigation__link--footer" href="#">Галерея</a>
+              <a class="navigation__link navigation__link--footer" href="#"><nobr>Виставки та</nobr> події</a>
+            </div>
+
+            <div class="navigation__right navigation__right--footer">
+              <a class="navigation__link navigation__link--footer" href="#">Про Нас</a>
+              <a class="navigation__link navigation__link--footer" href="#">Контакти</a>
+            </div>
+          </nav>
+
+          <div class="footer__copyright">
+            <p class="footer__copyright-text">Designed by Zhyriada Marina</p>
+
+            <p class="footer__copyright-text">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
