--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,60 @@
           </article>
         </div>
       </section>
+
+      <section class="lecture">
+        <img
+          src="images/lecture-background.png"
+          alt="Lecture background"
+        />
+
+        <div class="lecture__container">
+          <div class="lecture__box">
+            <div class="lecture__info-container">
+              <p class="lecture__type">ЛЕКЦІЯ</p>
+              <p class="lecture__date">26/08/2019 - 11:00</p>
+            </div>
+
+            <h2 class="lecture__title">Від класицизму до романтизму</h2>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="gallery__container">
+          <h2 class="gallery__title">Галерея</h2>
+        </div>
+
+        <div class="gallery__images">
+          <img
+            class="gallery__image"
+            src="images/gallery/gallery-image-1.png"
+            alt="Gallery image 1"
+          />
+
+          <img
+            class="gallery__image"
+            src="images/gallery/gallery-image-1.png"
+            alt="Gallery image 1"
+          />
+        </div>
+
+        <div class="gallery__container">
+          <div class="gallery__dots">
+            <div class="gallery__dot gallery__dot--active"></div>
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
+            <div class="gallery__dot"></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription">
+        <h2 class="subscription__title">Підписка</h2>
+        <h3 class="subscription__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </h3>
+      </section>
     </main>
   </body>
 </html>
