--- a/src/index.html
+++ b/src/index.html
@@ -56,17 +56,25 @@
       <div class="header__image"></div>
 
       <div class="header__container">
-        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <div class="header__content">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-        <div class="header__tickets">
-          <p class="header__tickets-text">КВИТКИ</p>
+          <div class="header__tickets">
+            <p class="header__tickets-text">КВИТКИ</p>
 
-          <div class="header__tickets-button">
-            <img
-              src="images/icons/arrow-right.svg"
-              alt="Arrow right"
-            />
+            <div class="header__tickets-button">
+              <img
+                src="images/icons/arrow-right.svg"
+                alt="Arrow right"
+              />
+            </div>
           </div>
+
+          <img
+            class="header__events-line"
+            src="images/events-line.svg"
+            alt="Events line"
+          />
         </div>
       </div>
     </header>
@@ -125,29 +133,31 @@
         <div class="menu__schelude-container">
           <p class="menu__schelude-entry">Графік роботи</p>
 
-          <p class="menu__schelude-entry">
-            <strong>12:00 — 20:00</strong>
-            середа
-            <br />
-            <strong>12:00 — 20:00</strong>
-            четвер
-            <br />
-            <strong>12:00 — 20:00</strong>
-            п’ятниця
-            <br />
-            <strong>11:00 — 19:00</strong>
-            субота
-            <br />
-            <strong>11:00 — 19:00</strong>
-            неділя
-          </p>
+          <div class="menu__schelude-info">
+            <p class="menu__schelude-entry">
+              <strong>12:00 — 20:00</strong>
+              середа
+              <br />
+              <strong>12:00 — 20:00</strong>
+              четвер
+              <br />
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+              <br />
+              <strong>11:00 — 19:00</strong>
+              субота
+              <br />
+              <strong>11:00 — 19:00</strong>
+              неділя
+            </p>
 
-          <p class="menu__schelude-entry">
-            <strong>Вихідні:</strong>
-            понеділок, вівторок
-            <br />
-            Каса припиняє роботу за 1 годину до закриття музею
-          </p>
+            <p class="menu__schelude-entry">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
         </div>
       </div>
 
@@ -166,21 +176,23 @@
               alt="I leave and come back image"
             />
 
-            <div class="event__info-container">
-              <p class="event__type">ВИСТАВКА</p>
-              <p class="event__period">26.08-29.11.2019</p>
-            </div>
+            <div class="event__container">
+              <div class="event__info-container">
+                <p class="event__type">ВИСТАВКА</p>
+                <p class="event__period">26.08-29.11.2019</p>
+              </div>
 
-            <div class="event__title-container">
-              <h3 class="event__title">Йду і повертаюсь</h3>
-              <div class="event__status"></div>
-            </div>
+              <div class="event__title-container">
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <div class="event__status"></div>
+              </div>
 
-            <p class="event__description">
-              Національний Художній Музей України презентує унікальну частину
-              колекції Градобанку - українське мистецтво другої половини
-              1980-1995 років.
-            </p>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
           </article>
 
           <article class="event">
@@ -190,27 +202,30 @@
               alt="And memories and dreams"
             />
 
-            <div class="event__info-container">
-              <p class="event__type">ВИСТАВКА</p>
-              <p class="event__period">26.08-29.11.2019</p>
-            </div>
+            <div class="event__container">
+              <div class="event__info-container">
+                <p class="event__type">ВИСТАВКА</p>
+                <p class="event__period">26.08-29.11.2019</p>
+              </div>
 
-            <div class="event__title-container">
-              <h3 class="event__title">І спогади і мрії</h3>
-              <div class="event__status"></div>
-            </div>
+              <div class="event__title-container">
+                <h3 class="event__title">І спогади і мрії</h3>
+                <div class="event__status"></div>
+              </div>
 
-            <p class="event__description">
-              Національний Художній Музей України презентує унікальну частину
-              колекції Градобанку - українське мистецтво другої половини
-              1980-1995 років.
-            </p>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
           </article>
         </div>
       </section>
 
       <section class="lecture">
         <img
+          class="lecture__image"
           src="images/lecture-background.png"
           alt="Lecture background"
         />
@@ -241,8 +256,14 @@
 
           <img
             class="gallery__image"
-            src="images/gallery/gallery-image-1.png"
-            alt="Gallery image 1"
+            src="images/gallery/gallery-image-2.png"
+            alt="Gallery image 2"
+          />
+
+          <img
+            class="gallery__image"
+            src="images/gallery/gallery-image-2.png"
+            alt="Gallery image 2"
           />
         </div>
 
@@ -253,6 +274,32 @@
             <div class="gallery__dot"></div>
             <div class="gallery__dot"></div>
           </div>
+        </div>
+
+        <div class="gallery__images-grid">
+          <img
+            class="gallery__image gallery__image--tall"
+            src="images/gallery/desktop/gallery-image-1.png"
+            alt="Gallery image 1"
+          />
+
+          <img
+            class="gallery__image gallery__image--square"
+            src="images/gallery/desktop/gallery-image-2.png"
+            alt="Gallery image 2"
+          />
+
+          <img
+            class="gallery__image gallery__image--wide"
+            src="images/gallery/desktop/gallery-image-3.png"
+            alt="Gallery image 3"
+          />
+
+          <img
+            class="gallery__image gallery__image--small-square"
+            src="images/gallery/desktop/gallery-image-4.png"
+            alt="Gallery image 4"
+          />
         </div>
       </section>
 
@@ -286,6 +333,7 @@
     <footer class="footer">
       <div class="footer__top">
         <img
+          class="footer__logo"
           src="images/logo.svg"
           alt="NUMA logo"
         />
@@ -320,23 +368,18 @@
 
         <p>
           <strong>12:00 — 20:00</strong>
-          <br />
           середа
           <br />
           <strong>12:00 — 20:00</strong>
-          <br />
           четвер
           <br />
           <strong>12:00 — 20:00</strong>
-          <br />
           п’ятниця
           <br />
           <strong>11:00 — 19:00</strong>
-          <br />
           субота
           <br />
           <strong>11:00 — 19:00</strong>
-          <br />
           неділя
         </p>
 
@@ -372,7 +415,7 @@
 
       <div class="footer__bottom-line"></div>
 
-      <div class="footer__links-container footer__links-container-left">
+      <div class="footer__links-container footer__links-container--left">
         <a
           class="footer__link"
           href="#gallery"
@@ -402,11 +445,10 @@
         </a>
       </div>
 
-      <p class="footer__copyright">
-        Designed by Zhyriada Marina
-        <br />
-        Copyright © 2019. All Rights Reserved.
-      </p>
+      <div class="footer__copyright">
+        <p>Designed by Zhyriada Marina</p>
+        <p>Copyright © 2019. All Rights Reserved.</p>
+      </div>
     </footer>
   </body>
 </html>
