--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,347 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link rel="icon" href="images/logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin = "anonymous"
+      >
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/swiper-bundle.min.css">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <!-- #region header-->
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="header__menu menu--padding">
+            <a href="#menu" class="icon icon--menu"></a>
+            <div class="header__logo logo">na <br> my</div>
+          </div>
+        </div>
+        <div class="header__bottom">
+          <div class="header__title">ХУДОЖНІЙ МУЗЕЙ</div>
+          <button class="header__button button" type="button">
+            <span class="button__text">Квитки</span>
+            <span class="button__icon">
+              <img
+                src="images/icon-arrow.svg"
+                alt="arrow"
+                class="button__arrow"
+              >
+            </span>
+          </button>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion header-->
+    <!-- #region menu-->
+    <aside id="menu" class="menu page__menu" >
+      <div class="container">
+        <div class="menu--padding">
+          <div class="menu__grid">
+            <div class="menu__top">
+              <a
+                href="#"
+                class="icon icon--close menu__top--icon"
+              ></a>
+              <div class="menu__top--part">
+                <div class="menu__top--col">
+                  <a href="#gallery" class="menu__top--link">Галерея</a>
+                  <a href="#events" class="menu__top--link">Виставки та події</a>
+                </div>
+                <div class="menu__top--col">
+                  <a href="#about" class="menu__top--link">Про Нас</a>
+                  <a href="#contacts" class="menu__top--link">Контакти</a>
+                </div>
+              </div>
+            </div>
+            <div class="menu__bottom">
+              <div class="menu__bottom--col-1">
+                <h3 class="menu__title">
+                  Графік роботи
+                </h3>
+                <ul class="menu__timetable">
+                  <li class="menu__timetable--item">
+                    <span class="menu__timetable--hours">12:00 — 20:00</span>
+                    середа
+                  </li>
+                  <li class="menu__timetable--item">
+                    <span class="menu__timetable--hours">12:00 — 20:00</span>
+                    четвер
+                  </li>
+                  <li class="menu__timetable--item">
+                    <span class="menu__timetable--hours">12:00 — 20:00</span>
+                    п’ятниця
+                  </li>
+                  <li class="menu__timetable--item">
+                    <span class="menu__timetable--hours">11:00 — 19:00</span>
+                    субота
+                  </li>
+                  <li class="menu__timetable--item">
+                    <span class="menu__timetable--hours">11:00 — 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+              </div>
+              <div class="menu__bottom--col-2">
+                <p class="menu__note">
+                  <span class=" menu__note--bold">Вихідні:</span>понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <div class="page__overlay"></div>
+    <!-- #endregion menu-->
+    <main class="main">
+      <!-- #region events-->
+      <section id="events" class="section section-events events">
+        <div class="container container__section">
+          <h2 class="section__title events__title ">Актуальні події</h2>
+          <div class="events__wrapper">
+            <div class="events__content">
+              <img
+                src="images/come-back.png"
+                alt="I go and come back"
+                class="events__content--img"
+              >
+            </div>
+            <div class="events__info">
+              <div class="events__info--wrapper">
+                <p class="events__info--name">ВИСТАВКА
+                  <span class="events__info--data">26.08-29.11.2019</span>
+                </p>
+                <h3 class="events__info--title">Йду і повертаюсь</h3>
+                <p class="events__info--description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+            <div class="events__content">
+              <img
+                src="images/dream.png"
+                alt="Memories and dream"
+                class="events__content--img"
+              >
+            </div>
+            <div class="events__info">
+              <div class="events__info--wrapper">
+                <p class="events__info--name">ВИСТАВКА
+                  <span class="events__info--data">26.08-29.11.2019</span>
+                </p>
+                <h3 class="events__info--title">І спогади і мрії</h3>
+                <p class="events__info--description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <article class="events__lection">
+          <div class="events__lection--img"></div>
+          <div class="events__lection--info">
+            <p class="events__info--name">ЛЕКЦІЯ
+              <span class="events__info--data">26/08/2019 - 11:00</span>
+            </p>
+            <h3 class="events__info--title">Від класицизму до романтизму</h3>
+          </div>
+        </article>
+      </section>
+      <!-- #endregion events-->
+      <!-- #region galery-->
+      <section id="gallery" class="gallery section section-gallery">
+        <div class="container container__section">
+          <div class="gallery__wrapper mySwiper swiper">
+            <h2 class="gallery__title section__title">
+              Галерея
+            </h2>
+            <div class="gallery__content swiper-wrapper">
+              <div class="gallery__link gallery__link--square gallery__link--long swiper-slide">
+                <img
+                  src="images/girl.png"
+                  alt="ukranian girl"
+                  class="gallery__photo"
+                >
+              </div>
+              <div class="gallery__link gallery__link--wide gallery__link--long swiper-slide">
+                <img
+                  src="images/winter.png"
+                  alt="winter"
+                  class="gallery__photo"
+                >
+              </div>
+              <div class="gallery__link gallery__link--wide gallery__link--short swiper-slide">
+                <img
+                  src="images/summer.png"
+                  alt="summer"
+                  class="gallery__photo"
+                >
+              </div>
+              <div class="gallery__link gallery__link--square gallery__link--short swiper-slide">
+                <img
+                  src="images/sea.png"
+                  alt="sea"
+                  class="gallery__photo"
+                >
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+      <!-- #endregion galery-->
+      <section class="subscription section section-subscription" id="about">
+        <div class="subscription__content">
+          <h2 class="subscription__title section__title">
+            Підписка
+          </h2>
+          <p class="subscription__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            class="subscription__form"
+            action="#"
+            method="post"
+            onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              name="email"
+              class="subscription__email"
+              placeholder="E-mail"
+              required
+            >
+            <button
+              class="subscription__button"
+              type="submit"
+            >
+              <img
+                src="images/icon-arrow.svg"
+                alt="arrow"
+                class="subscription__arrow"
+              >
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer id="contacts" class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__content--social">
+            <div class="footer__social">
+              <a href="#" class="footer__logo logo">na <br> my</a>
+              <div class="footer__icons">
+                <a
+                  href="https://uk-ua.facebook.com/"
+                  target="_blank"
+                  class="footer__facebook icon icon--facebook"
+                >
+                </a>
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="footer__insta icon icon--insta"
+                >
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__content--info">
+            <div class="footer__info--wrapper">
+              <div class="footer__info">
+                <h3 class="footer__title">
+                  Графік роботи
+                </h3>
+                <ul class="footer__timetable">
+                  <li class="footer__timetable--item">
+                    <span class="footer__timetable--hours">12:00 — 20:00</span>
+                    середа
+                  </li>
+                  <li class="footer__timetable--item">
+                    <span class="footer__timetable--hours">12:00 — 20:00</span>
+                    четвер
+                  </li>
+                  <li class="footer__timetable--item">
+                    <span class="footer__timetable--hours">12:00 — 20:00</span>
+                    п’ятниця
+                  </li>
+                  <li class="footer__timetable--item">
+                    <span class="footer__timetable--hours">11:00 — 19:00</span>
+                    субота
+                  </li>
+                  <li class="footer__timetable--item">
+                    <span class="footer__timetable--hours">11:00 — 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+                <p class="footer__note">
+                  <span class=" footer__note--bold">Вихідні:</span>понеділок, вівторок <br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+              <div class="footer__contacts">
+                <h3 class="footer__title">
+                  Контакти:
+                </h3>
+                <a
+                href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+                target="_blank"
+                class="footer__contacts--link"
+                >
+                вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__contacts--link"
+                >
+                тел. +38 (044) 278-13-57
+                </a>
+                <a
+                href="tel:+38 (044) 278-74-54"
+                class="footer__contacts--link"
+                >
+                факс +38 (044) 278-74-54
+                </a>
+                <a
+                href="mailto:info@namu.kiev.ua"
+                target="_blank"
+                class="footer__contacts--link"
+                >
+                e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__content--navigation">
+            <div class="footer__navigation">
+              <div class="footer__navigation--item">
+                <a href="#gallery" class="footer__navigation--link">Галерея</a>
+                <a href="#events" class="footer__navigation--link">Виставки та події</a>
+              </div>
+              <div class="footer__navigation--item">
+                <a href="#about" class="footer__navigation--link">Про Нас</a>
+                <a href="#contacts" class="footer__navigation--link">Контакти</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__author">
+          <p class="footer__author--info">Designed by Zhyriada Marina</p>
+          <p class="footer__author--info">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <script src="scripts/swiper-bundle.min.js"></script>
+    <script src="scripts/swiper.js"></script>
   </body>
 </html>
